working-assets/css/global.css
/* ... */
.Price--wrapper {
    display: flex;
    align-items: center;
    gap: 0.2em;
}

.Price--compareAt {
    position: relative;
    margin-left: 5px;
    margin: 0 5px 0 0;
    color: #888;
    width: fit-content;
}

.Price--compareAt::before {
    position: absolute;
    content: "";
    transform: translateY(0.5em);
    left: 0;
    width: calc(100% + 0.4em);
    left: -0.2em;
    height: 1px;
    background: currentColor;
}

.Price--saving {
    align-content: center;
    display: block;
    width: fit-content;
    text-transform: uppercase;
    padding: 0.4em 1em 0.2em;
    font-size: 11px;
    margin: 0 0 0 auto;
}

.rtf {
    & a {
        text-decoration: underline;
    }
}

/* GLOBAL  */

@view-transition {
    navigation: auto;
}

*::-webkit-scrollbar-track,
*::-webkit-scrollbar-thumb,
*::-webkit-scrollbar {
    border-radius: 0;
}

[hidden] {
    display: none !important;
}

.max-width {
    width: min(90vw, 1270px);
    padding: 2vh 0 0;
    margin: 0 auto;
}

.visually-hidden {
    overflow: hidden;
    position: absolute !important;
    clip: rect(0 0 0 0);
    border: 0;
    height: 1px;
    margin: -1px;
    padding: 0;
    width: 1px;
}

.rotate180 {
    transform: rotate(180deg);
}

.rotate90 {
    transform: rotate(90deg);
}

.rotate45 {
    transform: rotate(45deg);
}

.rotate135 {
    transform: rotate(-135deg);
}

.rotate405 {
    transform: rotate(405deg);
}

svg {
    pointer-events: none;
    transition: color 0.2s ease, fill 0.2s ease;
}

*:hover>svg.Icon--trash {
    color: var(--c-warning);
}

page-overlay {
    position: fixed;
    inset: 0;
    backdrop-filter: brightness(0.9) blur(2px);
    z-index: 10;
    opacity: 0;
    visibility: hidden;
    transition: opacity .15s, visibility .15s
}

body.no-scroll page-overlay {
    opacity: 1;
    visibility: visible;
}

.drawer {
    z-index: 11;
}

.no-scroll {
    overflow: hidden;
}

.mob-hide {
    display: none;
    visibility: hidden;
}

.Icon {
    height: 100%;
}

.close-icon {
    rotate: -45deg;
}


.fade-out,
.fade-in {
    visibility: hidden;
    opacity: 0;
    position: relative;
    transform: translateY(100%);
    transition: all 0.4s var(--overshoot-bezier);
}

.fade-out {
    height: 0;
    transform: translateY(-100%);
    padding: 0;
    margin: 0
}

.splide__slide.is-active .fade-in,
.fade-in.active {
    visibility: visible;
    opacity: 1;
    transform: translateY(0);
    transition-delay: 0.4s;
    height: auto;
}

.no-height {
    height: 0;
}


.loader {
    --height: 25px;
    animation: loadfade 1.2s linear infinite;
    animation-delay: .3s;
    background-color: var(--accent-background);
    height: min(50%, 25px);
    margin: 0 auto;
    position: relative;
    width: 8.33333px;
    z-index: -1;
}

.loader,
.loader:after,
.loader:before {
    box-shadow: inset 0 0 2px 0 var(--c-black);
    display: block;
    height: var(--height);
    width: calc(var(--height)/3)
}

.loader:after,
.loader:before {
    animation: loadfade 1.2s linear infinite;
    animation-delay: .6s;
    background: var(--accent-background);
    content: "";
    left: calc(var(--height)/2);
    position: absolute
}

.loader:before {
    animation-delay: 0s;
    left: auto;
    right: calc(var(--height)/2)
}

.grid-loader {
    grid-area: 1 / 1;
    opacity: 1;
    transition: opacity 0.15s ease;
}

.inverted {
    filter: invert(1)
}

@keyframes loadfade {
    0% {
        background-color: var(--c-black);
        box-shadow: inset 0 0 2px 0 var(--c-black), 0 0 5px 0 #ccc
    }

    66% {
        background-color: var(--c-off-white);
        box-shadow: inset 0 0 2px 0 grey
    }

    to {
        background-color: #fff;
        box-shadow: inset 0 0 2px 0 grey
    }
}

button {
    margin: 0;
    margin: 0;
    background: none;
    border: none;
    cursor: pointer;
}

.button {
    text-transform: uppercase;
    letter-spacing: var(--letter-spacing);
    padding: 0.75rem 1.5rem 0.55rem;
    display: inline-block;
    text-align: center;
    align-content: center;
    width: max-content;
    scale: 1;
    transition: scale 0.15s ease;

    &:active {
        scale: 0.95;
    }
}

.button-primary,
.button-secondary,
.button-inverted {
    --btn-color: var(--c-black);
    --btn-bg: var(--c-black);
    background-color: transparent;
    color: var(--c-white);
    border: 1px solid var(--btn-bg);
    cursor: pointer;
    position: relative;
    overflow-y: hidden;
    font-weight: 700;

    &::before {
        background-color: var(--btn-bg);
        content: "";
        width: 100%;
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
        z-index: -2;
    }

    &::after {
        background-color: color-mix(in lab, var(--btn-bg), white 7.5%);
        content: "";
        width: 100%;
        height: 100%;
        position: absolute;
        top: 100%;
        left: 0;
        z-index: -1;
        transition: top .1s ease-out;
    }

    &:hover {
        color: var(--c-white);

        &::after {
            top: 0;
        }
    }
}

.button-secondary {
    --btn-color: var(--c-black);
    --btn-bg: transparent;
    background-color: var(--btn-bg);
    color: var(--c-black);
    border: 1px solid var(--c-black);

    &:hover {
        color: var(--c-black);
    }

    &::before {
        background-color: var(--btn-bg);
    }

    &::after {
        background-color: var(--btn-color);
        opacity: 0.2;
    }
}

.button-inverted {
    color: var(--c-black);
    border: none;

    &:hover {
        color: var(--c-black);
    }

    &::before {
        background-color: var(--c-white);
    }

    &::after {
        background-color: var(--c-light-grey);
    }
}

.BIS_trigger {
    font-size: var(--txt-sm);
    margin: 15px auto 0;
}
/* ... */

